force-app/main/default/objects/Lead/fields/ToMarketingCloud__c.field-meta.xml
<CustomField>
    <fullName>ToMarketingCloud__c</fullName>
    <formula>IF(AND(
ISBLANK( Email ) = false,
OR( TEXT( CountryCode__c ) =&apos;GB&apos;, TEXT(CountryCode__c) = &apos;FR&apos;),
ISBLANK( EmailBouncedReason ) = true,
CONTAINS(Email, &apos;porcelanosa&apos;) = false,
IsConverted  = false,
NotvalidEmail__c = false
), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Marketing Cloud</label>
    <type>Checkbox</type>
</CustomField>