force-app/main/default/objects/Lead/fields/ZohoId__c.field-meta.xml
<CustomField>
    <fullName>ZohoId__c</fullName>
    <externalId>true</externalId>
    <label>Zoho Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>