force-app/main/default/objects/Lead/recordTypes/USWebRequest.recordType-meta.xml
<RecordType>
    <fullName>USWebRequest</fullName>
    <active>true</active>
    <businessProcess>US Porcelanosa</businessProcess>
    <description>US website requests</description>
    <label>US Web Request</label>
</RecordType>