force-app/main/default/objects/Lead/recordTypes/WebRequest.recordType-meta.xml
<RecordType>
    <fullName>WebRequest</fullName>
    <active>true</active>
    <businessProcess>Porcelanosa</businessProcess>
    <description>Lead captured from web forms</description>
    <label>Web Request</label>
</RecordType>