force-app/main/default/objects/Lead/validationRules/Mandatory_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Address</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
				ISBLANK( Street ),
				ISBLANK( City ),
				ISBLANK( PostalCode ),
				ISBLANK( Country )
				)</errorConditionFormula>
    <errorMessage>Please fill out the address field to save the record</errorMessage>
</ValidationRule>