force-app/main/default/objects/Lead/validationRules/MB_Junk_Status_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>MB_Junk_Status_Invalid</fullName>
    <active>false</active>
    <description>material bank leads cannot be marked as Junk</description>
    <errorConditionFormula>ISPICKVAL( LeadType__c ,&quot;US Material Bank&quot;) &amp;&amp; ISPICKVAL( Status , &quot;Junk Lead&quot;)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Material Bank Leads cannot be Junk Leads</errorMessage>
</ValidationRule>