force-app/main/default/objects/Lead/validationRules/Validate_Lead_Source_selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Lead_Source_selection</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
OR($Profile.Name = &apos;UK Commercial Retail&apos;,$Profile.Name = &apos;UK Commercial Trade&apos;)
,TEXT(LeadSource) = &apos;Explore_FR&apos;),
AND(
OR($Profile.Name = &apos;FR Commercial Extérieur&apos;,$Profile.Name = &apos;FR Commercial Salle&apos;)
,TEXT(LeadSource) = &apos;Barbour_UK&apos;))</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>You cannot select this option on Lead Source</errorMessage>
</ValidationRule>