force-app/main/default/objects/Lead/listViews/All_Leads.listView-meta.xml
<ListView>
    <fullName>All_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LeadSubtype__c</columns>
    <columns>LeadType__c</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Postcode__c</columns>
    <columns>Operation_Type__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>DateCreated__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Leads</label>
</ListView>