force-app/main/default/objects/Lead/listViews/All_USA_Leads.listView-meta.xml
<ListView>
    <fullName>All_USA_Leads</fullName>
    <columns>AccountId__c</columns>
    <columns>ExistingAccount__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LeadSubtype__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>LeadType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All USA Leads</label>
</ListView>