force-app/main/default/objects/Lead/listViews/Appointment_Set_Up.listView-meta.xml
<ListView>
    <fullName>Appointment_Set_Up</fullName>
    <columns>Sales_Office__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>ExistingAccount__c</columns>
    <columns>AppointmentType__c</columns>
    <columns>Showroom__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>LEAD.ZIP</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LeadType__c</field>
        <operation>equals</operation>
        <value>Book an Appointment</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Not contacted</value>
    </filters>
    <label>Appointment Requested</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Porcelanosa_USA_Director_Regional</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>