force-app/main/default/objects/Lead/listViews/Arizona.listView-meta.xml
<ListView>
    <fullName>Arizona</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>Postcode__c</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Representative__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LeadSubtype__c</columns>
    <columns>LEAD.CONVERTED</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Office__c</field>
        <operation>contains</operation>
        <value>ARIZONA</value>
    </filters>
    <label>Arizona</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Porcelanosa_USA_Director_Regional</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>