force-app/main/default/objects/Lead/listViews/Aubagne_File_d_Attente_Lead.listView-meta.xml
<ListView>
    <fullName>Aubagne_File_d_Attente_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Azurceramique File d&apos;Attente</label>
    <queue>Aubagne_File_d_Attente</queue>
    <sharedTo>
        <role>Commercial_Ext_rieur_Azurceramique</role>
        <role>Organizacion_Azurc_ramique</role>
        <role>Sociedad_Azurceramique</role>
    </sharedTo>
</ListView>