force-app/main/default/objects/Lead/listViews/Austin.listView-meta.xml
<ListView>
    <fullName>Austin</fullName>
    <columns>Postcode__c</columns>
    <columns>Sales_Office__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>AccountId__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LeadSubtype__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Ventura</value>
    </filters>
    <label>Austin</label>
    <sharedTo>
        <roleAndSubordinatesInternal>B_U_Manager_Austin</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>