force-app/main/default/objects/Lead/listViews/Balma_Leads.listView-meta.xml
<ListView>
    <fullName>Balma_Leads</fullName>
    <columns>LEAD.EMAIL_OPT_OUT</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>Postcode__c</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Representative__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LeadType__c</columns>
    <columns>LeadSubtype__c</columns>
    <columns>LEAD.CONVERTED</columns>
    <filterScope>Everything</filterScope>
    <label>Balma Leads</label>
    <sharedTo>
        <role>Porcelanosa_USA_Director_Regional</role>
    </sharedTo>
</ListView>