force-app/main/default/objects/Lead/listViews/Besan_on_File_d_Attente_Lead.listView-meta.xml
<ListView>
    <fullName>Besan_on_File_d_Attente_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Bourgogne File d&apos;Attente</label>
    <queue>Besan_on_File_d_Attente</queue>
    <sharedTo>
        <role>Organizacion_Euroceramique</role>
        <role>Sociedad_Euroceramique</role>
    </sharedTo>
</ListView>