force-app/main/default/objects/Lead/listViews/Bordeaux_File_d_Attente_Lead.listView-meta.xml
<ListView>
    <fullName>Bordeaux_File_d_Attente_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Sud-Ouest File d&apos;Attente</label>
    <queue>Bordeaux_File_d_Attente</queue>
    <sharedTo>
        <role>Commercial_Ext_rieur_P_S_O</role>
        <role>Organizacion_P_S_O</role>
        <role>Sociedad_P_S_O</role>
    </sharedTo>
</ListView>