force-app/main/default/objects/Lead/listViews/Bristol_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Bristol_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Bristol Queue</label>
    <queue>Bristol_Queue</queue>
    <sharedTo>
        <role>Sales_Office_Bristol</role>
        <role>Sociedad_Western</role>
    </sharedTo>
</ListView>