force-app/main/default/objects/Lead/listViews/Caen_File_d_Attente_Lead.listView-meta.xml
<ListView>
    <fullName>Caen_File_d_Attente_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Caen File d&apos;Attente</label>
    <queue>Caen_File_d_Attente</queue>
    <sharedTo>
        <role>B_U_Centre_Ouest</role>
        <role>Commercial_Ext_rieur_Caen</role>
        <role>Responsable_Agence_Caen</role>
        <role>Sociedad_Ouest</role>
    </sharedTo>
</ListView>