force-app/main/default/objects/Lead/listViews/Cambridge_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Cambridge_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Cambridge Queue</label>
    <queue>Cambridge_Queue</queue>
    <sharedTo>
        <role>Sales_Office_Cambridge</role>
        <role>Sociedad_Southeast</role>
    </sharedTo>
</ListView>