force-app/main/default/objects/Lead/listViews/Cannock_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Cannock_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Cannock Queue</label>
    <queue>Cannock_Queue</queue>
    <sharedTo>
        <role>Organizacion_Midlands</role>
        <role>Sales_Office_Trade_Midlands</role>
        <role>Sociedad_Midlands</role>
    </sharedTo>
</ListView>